[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/dialog/RichTextLabel.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.215686, 0.0117647, 0.203922, 1 )

[sub_resource type="Theme" id=2]
GridContainer/colors/GridContainer1 = Color( 0.458824, 0.0392157, 0.0392157, 1 )

[node name="Node2D" type="Node2D"]

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 9.59137
margin_top = 6.30582
margin_right = 117.591
margin_bottom = 20.3058
text = "Pidoras po imeni"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 50.0
margin_top = 31.0
margin_right = 463.0
margin_bottom = 430.0
rect_rotation = 0.107069
custom_styles/normal = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_selected = Color( 0.517647, 0.121569, 0.121569, 1 )
custom_colors/font_color_shadow = Color( 0.992157, 1, 0.996078, 1 )
bbcode_enabled = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseTimer" type="Timer" parent="RichTextLabel"]
wait_time = 0.05

[node name="textTimer" type="Timer" parent="RichTextLabel"]
wait_time = 0.209

[node name="ButtonContainer" type="GridContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.1353
margin_top = 427.056
margin_right = 461.135
margin_bottom = 556.056
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="RichTextLabel/pauseTimer" to="RichTextLabel" method="pause"]
[connection signal="timeout" from="RichTextLabel/textTimer" to="RichTextLabel" method="parse_text"]
